# roller-json-gzip2parquet

./: .gitignore  README.md  main.py  plan.md  pyproject.toml  roller_json_gzip2parquet.py
