[project]
name = "roller-json-gzip2parquet"
version = "0.1.0"
description = "Download and convert Brønnøysundregistrene roller data from JSON.gz to Parquet"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ijson>=3.2.0",
    "polars>=1.0.0",
    "httpx>=0.27.0",
    "pyarrow>=15.0.0",
]

[project.scripts]
roller-json-gzip2parquet = "main:main"
